--- a/SX.WebCore/packages.config
+++ b/SX.WebCore/packages.config
@@ -4,6 +4,7 @@
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EPPlus" version="4.1.0" targetFramework="net461" />
+  <package id="HtmlAgilityPack.Net45" version="2.0.20" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
